tests/good/interpret/011-case-identity.clap
val x = (case { x => x }) 42

