tests/bad/lexical/055-case-2.clap
val x = 
  case { _ => 42 | _ => }
 
